--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -246,7 +246,7 @@ body {
    @media (max-width: 991px) {
       flex-direction: column;
    }
-   .heading {
+   .heading__form {
       margin-bottom: 50px;
       h1 {
          font-size: 1.7rem;
